--- a/sncp-cbss/cbss.core/cbss.trace/trunk/pom.xml
+++ b/sncp-cbss/cbss.core/cbss.trace/trunk/pom.xml
@@ -43,6 +43,10 @@
 			<groupId>com.woniu.cbss</groupId>
 			<artifactId>cbss.core.util</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.woniu.cbss</groupId>
+			<artifactId>cbss.core.signature</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
