--- a/sncp-service/sncp-account/account-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-account/account-dubbo/src/main/resources/application-prod.properties
@@ -13,3 +13,4 @@ security.user.password=ID)!DFASDPOI!@#
 
 #ocp-account service url
 ocp.account.query.url=http://account.ocp.api.snail.com:12004/account/query
+ocp.account.easy.imprest.url=http://account.ocp.api.snail.com:12004/account/easy/imprest
