--- a/sncp-service/sncp-account/account-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-account/account-dubbo/src/main/resources/application-dev.properties
@@ -13,3 +13,4 @@ security.user.password=ID)!DFASDPOI!@#http.connect.timeout
 
 #ocp-account service url
 ocp.account.query.url=http://192.168.1.128:12004/account/query
+ocp.account.easy.imprest.url=http://192.168.1.128:12004/account/easy/imprest
