--- a/sncp-service/sncp-profile/profile-api/pom.xml
+++ b/sncp-service/sncp-profile/profile-api/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>sncp-exception</artifactId>
 			<version>${exception.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons.lang.version}</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
