--- a/sncp-service/sncp-account/account-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-account/account-dubbo/src/main/resources/application-dev.properties
@@ -14,3 +14,6 @@ security.user.password=ID)!DFASDPOI!@#http.connect.timeout
 #ocp-account service url
 ocp.account.query.url=http://192.168.1.128:12004/account/query
 ocp.account.easy.imprest.url=http://192.168.1.128:12004/account/easy/imprest
+ocp.account.easy.charge.url=http://192.168.1.128:12004/account/easy/charge
+ocp.account.imprest.url=http://192.168.1.128:12004/account/imprest
+ocp.account.charge.url=http://192.168.1.128:12004/account/charge
