--- a/sncp-service/sncp-account/account-dubbo/src/main/resources/application-tj.properties
+++ b/sncp-service/sncp-account/account-dubbo/src/main/resources/application-tj.properties
@@ -14,3 +14,6 @@ security.user.password=ID)!DFASDPOI!@#
 #ocp-account service url
 ocp.account.query.url=http://account.ocp.api.snail.com:12004/account/query
 ocp.account.easy.imprest.url=http://account.ocp.api.snail.com:12004/account/easy/imprest
+ocp.account.easy.charge.url=http://account.ocp.api.snail.com:12004/account/easy/charge
+ocp.account.imprest.url=http://account.ocp.api.snail.com:12004/account/imprest
+ocp.account.charge.url=http://account.ocp.api.snail.com:12004/account/charge
