--- a/sncp-service/sncp-passport/passport-dubbo/pom.xml
+++ b/sncp-service/sncp-passport/passport-dubbo/pom.xml
@@ -102,6 +102,10 @@
 			<artifactId>spring-cloud-starter-ribbon</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.jolokia</groupId>
 			<artifactId>jolokia-core</artifactId>
 		</dependency>
@@ -114,6 +118,15 @@
 			<groupId>commons-jexl</groupId>
 			<artifactId>commons-jexl</artifactId>
 			<version>${jexl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-javanica</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
