--- a/sncp-ploy/ploy-service/pom.xml
+++ b/sncp-ploy/ploy-service/pom.xml
@@ -14,6 +14,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
+			<artifactId>passport-api</artifactId>
+			<version>${sncp-passport.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.woniu.sncp</groupId>
+			<artifactId>imprest-api</artifactId>
+			<version>${sncp-imprest.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.woniu.sncp</groupId>
 			<artifactId>ploy-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -27,8 +37,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,11 +64,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		 <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>r09</version>
-        </dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r09</version>
+		</dependency>
 		<!-- ORACLE -->
 		<dependency>
 			<groupId>com.oracle</groupId>
