--- a/sncp-ploy/ploy-service/src/main/resources/application.yml
+++ b/sncp-ploy/ploy-service/src/main/resources/application.yml
@@ -1,16 +1,13 @@
 spring:
-  datasource:
-    url: jdbc:oracle:thin:@10.17.0.200:1521:center
-    username: sn_account
-    password: o_account_xn
-    driverClassName: oracle.jdbc.driver.OracleDriver
-    test-on-borrow: true
-    test-while-idle: true
-    validation-query: select 1 from dual;
-    maxActive: 10
-    maxIdle: 5
-  jpa:
-    show-sql: true
-    
+  application:
+    name: ploy-service
+  profiles: 
+    active: dev    
+server:
+  port: 8041
+  tomcat:
+    max-threads: 1000
+    uri-encoding: UTF-8
 
-  
+logging:
+  path: /usr/sncp/logs/micro/ploy
