--- a/sncp-ploy/pom.xml
+++ b/sncp-ploy/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.woniu.sncp</groupId>
 	<artifactId>sncp-ploy</artifactId>
@@ -33,13 +34,15 @@
 		<curator.version>2.9.1</curator.version>
 		<commons-net.version>3.5</commons-net.version>
 		<sncp-exception.version>1.0.3</sncp-exception.version>
+		<sncp-passport.version>1.0.3</sncp-passport.version>
+		<sncp-imprest.version>1.0.0-SNAPSHOT</sncp-imprest.version>
 	</properties>
 
 	<modules>
 		<module>ploy-api</module>
 		<module>ploy-jpa</module>
 		<module>ploy-service</module>
-    </modules>
+	</modules>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -48,13 +51,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	 <scm>
-        <url>scm:git:ssh://git@3.com/woniu-microservices.git</url>
-        <connection>scm:git:ssh://git@3.com/woniu-microservices.git</connection>
-        <developerConnection>scm:git:ssh://git@3.com/woniu-microservices.git</developerConnection>
+
+	<scm>
+		<url>scm:git:ssh://git@3.com/woniu-microservices.git</url>
+		<connection>scm:git:ssh://git@3.com/woniu-microservices.git</connection>
+		<developerConnection>scm:git:ssh://git@3.com/woniu-microservices.git</developerConnection>
 		<tag>HEAD</tag>
-    </scm>
+	</scm>
 
 	<build>
 		<plugins>
