--- a/sncp-vip/pom.xml
+++ b/sncp-vip/pom.xml
@@ -1,8 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.woniu.sncp</groupId>
-	<artifactId>sncp-ploy</artifactId>
+	<artifactId>sncp-vip</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -34,15 +33,13 @@
 		<curator.version>2.9.1</curator.version>
 		<commons-net.version>3.5</commons-net.version>
 		<sncp-exception.version>1.0.3</sncp-exception.version>
-		<sncp-passport.version>1.0.4-SNAPSHOT</sncp-passport.version>
-		<sncp-imprest.version>1.0.0-SNAPSHOT</sncp-imprest.version>
 	</properties>
 
 	<modules>
-		<module>ploy-api</module>
-		<module>ploy-jpa</module>
-		<module>ploy-service</module>
-	</modules>
+		<module>vip-api</module>
+		<module>vip-jpa</module>
+		<module>vip-service</module>
+    </modules>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -51,13 +48,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<scm>
-		<url>scm:git:ssh://git@3.com/woniu-microservices.git</url>
-		<connection>scm:git:ssh://git@3.com/woniu-microservices.git</connection>
-		<developerConnection>scm:git:ssh://git@3.com/woniu-microservices.git</developerConnection>
+	
+	 <scm>
+        <url>scm:git:ssh://git@3.com/woniu-microservices.git</url>
+        <connection>scm:git:ssh://git@3.com/woniu-microservices.git</connection>
+        <developerConnection>scm:git:ssh://git@3.com/woniu-microservices.git</developerConnection>
 		<tag>HEAD</tag>
-	</scm>
+    </scm>
 
 	<build>
 		<plugins>
