--- a/sncp-imprest/imprest-service/pom.xml
+++ b/sncp-imprest/imprest-service/pom.xml
@@ -84,6 +84,10 @@
 			<artifactId>dozer</artifactId>
 			<version>${dozer.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
