--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+#cache
+#spring.jpa.properties.hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
+#spring.jpa.properties.net.sf.ehcache.configurationResourceName = ehcache.xml
+#spring.jpa.properties.javax.persistence.sharedCache.mode = ENABLE_SELECTIVE
+#spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+#spring.jpa.properties.hibernate.cache.use_query_cache=true
+
+
+#cas
+#cas.server.login_url=https://sso.woniu.com/login
+#cas.server.serverName=http://cashier.woniu.com
+
+
+
+
 app.url=http://business.api.sandbox.wn/fbi/passport/queryAllCurrencyConf.do
 app.accessId=16
 app.accessType=1
@@ -102,3 +118,19 @@ monitor.hb.url=http://124.202.142.136:81/api/heartbeat/
 monitor.hb.token=8J}8}3bejTqq<HNFgwbh-3XY
 #\u5b9a\u65f6\u6e05\u9664cron\u8868\u8fbe\u5f0f(\u79d2\uff0c\u5206\uff0c\u65f6\uff0c\u5929\uff0c\u6708\uff0c\u661f\u671f [,\u5e74\u4efd])
 monitor.hb.cron=5 */30 * * * ? 
+
+
+
+
+
+
+##########################################
+########sms########
+##########################################
+
+sms.sendurl=http://10.17.0.21:84/validation/send.do
+sms.checkurl=http://10.17.0.21:84/validation/validate.do
+sms.appId=90
+sms.type=TEST
+sms.password=G9SZRA7jMGxgRc
+sms.key=zF0r14fMw5hVD3K2Y9
