--- a/sncp-cashier/cashier-api/src/main/resources/application.yml
+++ b/sncp-cashier/cashier-api/src/main/resources/application.yml
@@ -10,4 +10,4 @@ server:
     uri-encoding: UTF-8
 
 logging:
-  path: /usr/sncp/logs/micro/cashier
+  path: D://woniu-git-repository//woniu-microservices//master//sncp-cashier//cashier-api//
