--- a/sncp-cashier/pom.xml
+++ b/sncp-cashier/pom.xml
@@ -38,7 +38,7 @@
 		<sncp-exception.version>1.0.3</sncp-exception.version>
 		<sncp-security.version>1.0.0</sncp-security.version>
 		<mysql.version>5.1.38</mysql.version>
-		<sso.cas.version>3.2.1</sso.cas.version>
+		<sso.cas.version>3.3.3</sso.cas.version>
 		<commons.io.version>2.0.1</commons.io.version>
 		<ocp.account.version>1.3.1</ocp.account.version>
 	</properties>
@@ -114,9 +114,9 @@
 			<version>${sncp-security.version}</version>
 		</dependency>
 		<dependency>
-		  <groupId>com.snail.ocp</groupId>
-		  <artifactId>ocp-account-sdk-http</artifactId>
-		  <version>${ocp.account.version}</version>
+			<groupId>com.snail.ocp</groupId>
+			<artifactId>ocp-account-sdk-http</artifactId>
+			<version>${ocp.account.version}</version>
 		</dependency>
 		<!-- ocp passport -->
 		<dependency>
@@ -124,7 +124,7 @@
 			<artifactId>sncp-ocp-passport</artifactId>
 			<version>1.0.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -150,6 +150,19 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.0</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.5.7</version>
+		</dependency> -->
 	</dependencies>
 
 	<scm>
