收银台spring-boot版本初始化

--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -14,11 +14,11 @@
 
 
 
-app.url=http://business.api.sandbox.wn/fbi/passport/queryAllCurrencyConf.do
-app.accessId=16
-app.accessType=1
-app.accessPassword=2O3I4J21L2K3J
-app.key=A223L1J2H3S0DF98SKLJ
+bussiness.app.url=http://business.api.sandbox.wn/fbi/passport/queryAllCurrencyConf.do
+bussiness.app.accessId=16
+bussiness.app.accessType=1
+bussiness.app.accessPassword=2O3I4J21L2K3J
+bussiness.app.key=A223L1J2H3S0DF98SKLJ
 #\u7fe1\u7fe0\u5e01
 fcb.validation.token=http://user.sandbox.stone.snail.com:10004/validate/payToken
 
