--- a/sncp-cashier/cashier-api/src/main/resources/application-dev.yml
+++ b/sncp-cashier/cashier-api/src/main/resources/application-dev.yml
@@ -50,8 +50,8 @@ spring:
 #cas client config
   cas: 
     sign-out-filters: /logout
-    auth-filters: /*
-    validate-filters: /security/ttb/pay
+    auth-filters: /sso/**,/m/sso/**,/security/*,/security/ttb/pay
+    validate-filters: /*
     request-wrapper-filters: /*
     assertion-filters: /*
     cas-server-login-url: /login
