--- a/sncp-cashier/pom.xml
+++ b/sncp-cashier/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.5.RELEASE</version>
+		<version>1.3.8.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -38,15 +38,16 @@
 		<sncp-exception.version>1.0.3</sncp-exception.version>
 		<sncp-security.version>1.0.0</sncp-security.version>
 		<mysql.version>5.1.38</mysql.version>
-		<sso.cas.version>3.3.3</sso.cas.version>
+		<sso.cas.version>3.4.1</sso.cas.version>
 		<commons.io.version>2.0.1</commons.io.version>
 		<ocp.account.version>1.3.1</ocp.account.version>
 	</properties>
 
 	<modules>
 		<module>cashier-api</module>
-		<!-- <module>cashier-jpa</module> <module>cashier-service</module> <module>cashier-core</module> 
-			<module>cashier-common</module> -->
+		<module>cashier-jpa</module>
+		<module>cashier-core</module>
+		<module>cashier-common</module>
 	</modules>
 	<dependencies>
 		<dependency>
@@ -84,6 +85,10 @@
 				<exclusion>
 					<groupId>org.apache.httpcomponents</groupId>
 					<artifactId>httpclient</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.snail</groupId>
+					<artifactId>sncp-sms</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -150,19 +155,31 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.0</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-ehcache</artifactId>
+		<!-- memcache -->
+		<dependency>
+			<groupId>com.googlecode.xmemcached</groupId>
+			<artifactId>xmemcached</artifactId>
+			<version>1.3.6</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache</artifactId>
+			<groupId>axis</groupId>
+			<artifactId>axis</artifactId>
+			<version>1.4</version>
 		</dependency>
-		<dependency>
-			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache-core</artifactId>
-			<version>2.5.7</version>
-		</dependency> -->
 	</dependencies>
 
 	<scm>
