--- a/sncp-cashier/cashier-domain/pom.xml
+++ b/sncp-cashier/cashier-domain/pom.xml
@@ -11,6 +11,11 @@
 	</parent>
 
 	<dependencies>
+		<!-- 添加redis支持 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
 			<artifactId>querydsl-core</artifactId>
