--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -110,7 +110,7 @@
 			<artifactId>cas-client-support-distributed-ehcache</artifactId>
 			<version>${sso.cas.version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.woniu</groupId>
 			<artifactId>sncp-model</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
@@ -124,7 +124,7 @@
         			<artifactId>hibernate-core</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency> -->
 
 		<!-- 想要兼容Jsp 必须要添加以下2个文件 -->
 		<dependency>
