--- a/sncp-cashier/pom.xml
+++ b/sncp-cashier/pom.xml
@@ -107,6 +107,16 @@
 			<groupId>com.woniu</groupId>
 			<artifactId>sncp-model</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>validation-api</artifactId>
+					<groupId>javax.validation</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hibernate</groupId>
+        			<artifactId>hibernate-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
