--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -110,22 +110,17 @@
 			<artifactId>cas-client-support-distributed-ehcache</artifactId>
 			<version>${sso.cas.version}</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.woniu</groupId>
-			<artifactId>sncp-model</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<artifactId>sncp-captcha</artifactId>
+			<version>1.1.4</version>
 			<exclusions>
 				<exclusion>
-					<artifactId>validation-api</artifactId>
-					<groupId>javax.validation</groupId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.hibernate</groupId>
-        			<artifactId>hibernate-core</artifactId>
+					<artifactId>spring</artifactId>
+					<groupId>org.springframework</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency> -->
-
+		</dependency>
 		<!-- 想要兼容Jsp 必须要添加以下2个文件 -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
