收银台整合海外支付渠道相关模块

--- a/sncp-cashier/cashier-api/src/main/resources/application-dev.yml
+++ b/sncp-cashier/cashier-api/src/main/resources/application-dev.yml
@@ -27,6 +27,11 @@ spring:
    view:
     prefix: /WEB-INF/view
     suffix: .jsp
+
+#i18n
+  messages: 
+   basename: message/i18n
+
 #cas client config
   cas: 
     sign-out-filters: /logout
