--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -80,6 +80,12 @@
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>${zkclient.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jolokia</groupId>
@@ -152,6 +158,56 @@
 	        <groupId>org.codehaus.jackson</groupId>
 	        <artifactId>jackson-mapper-lgpl</artifactId>
 	        <version>1.9.6</version>
+	      </dependency>
+	      <dependency>
+	      	<groupId>com.woniu</groupId>
+	      	<artifactId>sncp-base</artifactId>
+	      	<version>1.1.6-SNAPSHOT</version>
+	      	<exclusions>
+	      		<exclusion>
+	      			<artifactId>spring</artifactId>
+	      			<groupId>org.springframework</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>sncp-captcha</artifactId>
+	      			<groupId>com.woniu</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>sncp-business</artifactId>
+	      			<groupId>com.woniu</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>slf4j-simple</artifactId>
+	      			<groupId>org.slf4j</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>sncp-security</artifactId>
+	      			<groupId>com.woniu</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>httpclient</artifactId>
+	      			<groupId>org.apache.httpcomponents</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>sncp-sms</artifactId>
+	      			<groupId>net.snail</groupId>
+	      		</exclusion>
+	      		<exclusion>
+	      			<artifactId>log4j</artifactId>
+	      			<groupId>log4j</groupId>
+	      		</exclusion>
+	      	</exclusions>
+	      </dependency>
+	      <dependency>
+	      	<groupId>com.snail.ocp</groupId>
+	      	<artifactId>ocp-account-sdk-http</artifactId>
+	      	<version>${ocp.account.version}</version>
+	      	<exclusions>
+	      		<exclusion>
+	      			<artifactId>log4j</artifactId>
+	      			<groupId>log4j</groupId>
+	      		</exclusion>
+	      	</exclusions>
 	      </dependency>
 	</dependencies>
 
