收银台整合过滤器，国际化配置文件

--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -7,9 +7,16 @@
 #spring.jpa.properties.hibernate.cache.use_query_cache=true
 
 
-#cas
-#cas.server.login_url=https://sso.woniu.com/login
-#cas.server.serverName=http://cashier.woniu.com
+##########################################
+#########cashier thread pool#########
+cashier.thread.core.poolsize=5
+cashier.thread.maximum.poolsize=50
+cashier.thread.keepalive.time=8
+cashier.thread.blockingqueue.num=20
+#########cashier thread pool#########
+##########################################
+
+
 
 ##########################################
 ########paypal########
