--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cashier-api</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
@@ -52,11 +52,11 @@
 					<artifactId>validation-api</artifactId>
 					<groupId>javax.validation</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>hibernate-validator</artifactId>
+					<groupId>org.hibernate</groupId>
+				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -158,6 +158,12 @@
 			<groupId>javax.servlet.jsp.jstl</groupId>
 			<artifactId>jstl-api</artifactId>
 			<version>1.2</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!--配置jsp jstl的支持 -->
 		<dependency>
@@ -174,6 +180,102 @@
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>1.9.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.snail.ocp</groupId>
+			<artifactId>ocp-account-sdk-http</artifactId>
+			<version>${ocp.account.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!--在用maven 编译，打包过程中回出现javax.servlet找不到的情况，所以需要在这里配置-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>com.woniu</groupId>
+        	<artifactId>sncp-base</artifactId>
+        	<version>1.1.6-SNAPSHOT</version>
+        	<exclusions>
+        		<exclusion>
+        			<artifactId>spring</artifactId>
+        			<groupId>org.springframework</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>sncp-captcha</artifactId>
+        			<groupId>com.woniu</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>sncp-business</artifactId>
+        			<groupId>com.woniu</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>slf4j-simple</artifactId>
+        			<groupId>org.slf4j</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>sncp-security</artifactId>
+        			<groupId>com.woniu</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>httpclient</artifactId>
+        			<groupId>org.apache.httpcomponents</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>sncp-sms</artifactId>
+        			<groupId>net.snail</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>servlet-api</artifactId>
+        			<groupId>javax.servlet</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>spring-orm</artifactId>
+        			<groupId>org.springframework</groupId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.woniu</groupId>
+        	<artifactId>sncp-model</artifactId>
+        	<version>2.0.0-SNAPSHOT</version>
+        	<exclusions>
+        		<exclusion>
+        			<artifactId>validation-api</artifactId>
+        			<groupId>javax.validation</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate-core</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate-validator</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>
+        				hibernate-commons-annotations
+        			</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>ejb3-persistence</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate-annotations</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -181,6 +283,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+					<encoding>${commons.encoding}</encoding>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
