--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -95,9 +95,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql.version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>${zkclient.version}</version>
@@ -124,7 +123,7 @@
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
-		</dependency>
+		</dependency> -->
 		<!-- CAS SSO -->
 		<dependency>
 			<groupId>org.jasig.cas.client</groupId>
@@ -243,7 +242,7 @@
         		</exclusion>
         	</exclusions>
         </dependency>
-        <dependency>
+        <!-- <dependency>
         	<groupId>com.woniu</groupId>
         	<artifactId>sncp-model</artifactId>
         	<version>2.0.0-SNAPSHOT</version>
@@ -275,7 +274,7 @@
         			<groupId>org.hibernate</groupId>
         		</exclusion>
         	</exclusions>
-        </dependency>
+        </dependency> -->
 	</dependencies>
 
 	<build>
