--- a/sncp-cashier/pom.xml
+++ b/sncp-cashier/pom.xml
@@ -53,7 +53,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -105,6 +104,32 @@
 					<groupId>org.hibernate</groupId>
         			<artifactId>hibernate-core</artifactId>
 				</exclusion>
+        		<exclusion>
+        			<artifactId>validation-api</artifactId>
+        			<groupId>javax.validation</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate-core</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate-validator</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>
+        				hibernate-commons-annotations
+        			</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>ejb3-persistence</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
+        		<exclusion>
+        			<artifactId>hibernate-annotations</artifactId>
+        			<groupId>org.hibernate</groupId>
+        		</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
