--- a/sncp-cashier/cashier-api/src/main/resources/dev172/bootstrap.yml
+++ b/sncp-cashier/cashier-api/src/main/resources/dev172/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
       prefix: /WEB-INF/view
       suffix: .jsp
   messages:
-    basename: i18n/messages
+    basename: message/i18n/messages
     encoding: UTF-8
   #cas client config
   cas: 
