--- a/sncp-cashier/cashier-api/src/main/resources/dev174/bootstrap-dev174.yml
+++ b/sncp-cashier/cashier-api/src/main/resources/dev174/bootstrap-dev174.yml
@@ -9,7 +9,7 @@ spring:
       fail-fast: true
       username: micro-cloud-config-client-user
       password: 1@^&IuRE(VBGPoiuy
-      profile: hystrixApp,dsSnPayDev174
+      profile: hystrixApp,dsSnPayDev174,redisClusterDev
 
 discover:
   hostname1: 10.206.2.253
