--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=@profileActive@
 #########server tomcat \u914d\u7f6e#########
 server.port= 80
 server.tomcat.max-threads= 1000
