--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -147,3 +147,6 @@ monitor.hb.token=8J}8}3bejTqq<HNFgwbh-3XY
 #\u5b9a\u65f6\u6e05\u9664cron\u8868\u8fbe\u5f0f(\u79d2\uff0c\u5206\uff0c\u65f6\uff0c\u5929\uff0c\u6708\uff0c\u661f\u671f [,\u5e74\u4efd])
 monitor.hb.cron=5 */30 * * * ? 
 
+
+#\u5f53\u524ddb\u73af\u5883,0 \u975e\u96c6\u7fa4 \uff0c1\u96c6\u7fa4
+db.mode=1
