--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -1,4 +1,32 @@
 spring.profiles.active=@profileActive@
+
+
+######### druid \u914d\u7f6e#########
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+# \u521d\u59cb\u5316\u5927\u5c0f\uff0c\u6700\u5c0f\uff0c\u6700\u5927
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# \u914d\u7f6e\u83b7\u53d6\u8fde\u63a5\u7b49\u5f85\u8d85\u65f6\u7684\u65f6\u95f4
+spring.datasource.maxWait=60000
+# \u914d\u7f6e\u95f4\u9694\u591a\u4e45\u624d\u8fdb\u884c\u4e00\u6b21\u68c0\u6d4b\uff0c\u68c0\u6d4b\u9700\u8981\u5173\u95ed\u7684\u7a7a\u95f2\u8fde\u63a5\uff0c\u5355\u4f4d\u662f\u6beb\u79d2 
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+# \u914d\u7f6e\u4e00\u4e2a\u8fde\u63a5\u5728\u6c60\u4e2d\u6700\u5c0f\u751f\u5b58\u7684\u65f6\u95f4\uff0c\u5355\u4f4d\u662f\u6beb\u79d2 
+spring.datasource.minEvictableIdleTimeMillis=300000
+# Oracle\u8bf7\u4f7f\u7528select 1 from dual
+spring.datasource.validationQuery=SELECT 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=true
+spring.datasource.testOnReturn=false
+# \u6253\u5f00PSCache\uff0c\u5e76\u4e14\u6307\u5b9a\u6bcf\u4e2a\u8fde\u63a5\u4e0aPSCache\u7684\u5927\u5c0f 
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+# \u914d\u7f6e\u76d1\u63a7\u7edf\u8ba1\u62e6\u622a\u7684filters\uff0c\u53bb\u6389\u540e\u76d1\u63a7\u754c\u9762sql\u65e0\u6cd5\u7edf\u8ba1\uff0c'wall'\u7528\u4e8e\u9632\u706b\u5899 
+spring.datasource.filters=stat,wall,slf4j
+######### druid \u914d\u7f6e#########
+
+
+
 #########server tomcat \u914d\u7f6e#########
 server.port= 80
 server.tomcat.max-threads= 1000
