收银台：国际版去除不需要的依赖

--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.profiles.active=@profileActive@
 
-
 ######### druid \u914d\u7f6e#########
+spring.druid.white.ips=172.18.70.15
+spring.druid.black.ips=
+spring.druid.username=admin
+spring.druid.pwd=123456
+
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # \u521d\u59cb\u5316\u5927\u5c0f\uff0c\u6700\u5c0f\uff0c\u6700\u5927
 spring.datasource.initialSize=5
@@ -35,6 +39,7 @@ server.port= 80
 server.tomcat.max-threads= 1000
 server.tomcat.uri-encoding= UTF-8
 #########server tomcat \u914d\u7f6e#########
+
 
 ########memcache###
 memcached.servers=10.17.0.23:90,10.17.0.23:9009
