--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -43,6 +43,14 @@
 					<artifactId>aspectjweaver</artifactId>
 					<groupId>org.aspectj</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -61,6 +69,10 @@
 				<exclusion>
 					<artifactId>hibernate-validator</artifactId>
 					<groupId>org.hibernate</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -84,8 +96,8 @@
 		</dependency>
 		<!-- aop -->
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -132,6 +144,18 @@
 				<exclusion>
 					<artifactId>spring</artifactId>
 					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>logback-classic</artifactId>
+					<groupId>ch.qos.logback</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.woniu</groupId>
+					<artifactId>sncp-common</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -182,6 +206,22 @@
 					<artifactId>slf4j-log4j12</artifactId>
 					<groupId>org.slf4j</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+  					<artifactId>bcprov-jdk16</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+ 				 	<artifactId>bcprov-ext-jdk16</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+  					<artifactId>bcpg-jdk16</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<!--在用maven 编译，打包过程中回出现javax.servlet找不到的情况，所以需要在这里配置 -->
@@ -189,71 +229,10 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.woniu</groupId>
-			<artifactId>sncp-base</artifactId>
-			<version>1.1.6-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>spring</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>sncp-captcha</artifactId>
-					<groupId>com.woniu</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>sncp-business</artifactId>
-					<groupId>com.woniu</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-simple</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>sncp-security</artifactId>
-					<groupId>com.woniu</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>httpclient</artifactId>
-					<groupId>org.apache.httpcomponents</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>sncp-sms</artifactId>
-					<groupId>net.snail</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>servlet-api</artifactId>
-					<groupId>javax.servlet</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>hibernate</artifactId>
-					<groupId>org.hibernate</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-orm</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>aspectjweaver</artifactId>
-					<groupId>org.aspectj</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.woniu</groupId>
-			<artifactId>sncp-ocp-passport</artifactId>
-			<version>1.0.1</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>aspectjweaver</artifactId>
-					<groupId>org.aspectj</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+		
 	</dependencies>
 
-	
+
 	<profiles>
 		<!-- 开发/封测环境 -->
 		<profile>
@@ -285,7 +264,7 @@
 			</properties>
 		</profile>
 	</profiles>
-	
+
 	<build>
 		<finalName>cashier.woniu.com</finalName>
 		<!-- 资源配置 -->
@@ -331,6 +310,13 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<warName>cashier.woniu.com</warName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<outputDirectory>${basedir}/target/classes</outputDirectory>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
