收银台：修改bug

--- a/sncp-cashier/cashier-api/src/main/resources/dev172/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/dev172/application.properties
@@ -64,7 +64,7 @@ cashier.thread.blockingqueue.num=20
 
 
 
-########paypal########
+########paypal-sandbox########
 
 #paypal platform
 paypal.acct1.UserName=merchant_api1.snail.com
