收银台：修改bug，设置编码支持utf-8，增加是否校验渠道金额配置，增加支付币种和回调币种

--- a/sncp-cashier/cashier-api/src/main/resources/dev172/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/dev172/application.properties
@@ -1,5 +1,8 @@
 spring.profiles.active=@profileActive@
 
+
+spring.http.encoding.charset=UTF-8
+
 ######### druid \u914d\u7f6e#########
 spring.druid.white.ips=172.18.70.15,127.0.0.1,58.211.28.178
 spring.druid.black.ips=172.18.70.16
